<resources>
    <string name="app_name">EyeSpy</string>
    <string name="LogInMessage">Welcome</string>
    <string name="MainActivityImageViewContentDescription"> </string>
    <string name="CameraButtonText">Submit Image</string>
    <string name="LogInButtonText">Log In</string>
    <string name="SignOutButtonText">Sign Out</string>
    <string name="GetImageButtonText">Retrieve Image</string>
    <string name="LogInPopupTitle">Log In</string>
    <string name="EnterEmailHint">Enter Email</string>
    <string name="EnterPasswordHint">Enter Password</string>
    <string name="EnterUsernameHint">Enter Username</string>
    <string name="SignUpButtonText">Create Account</string>
    <string name="CloseButtonText">Close</string>
    <string name="CheckButtonText">Check Location</string>
    <string name="UploadProgress">Upload In Progress</string>
    <string name="UploadComplete">Upload Finished</string>
    <string name="ImageMessage">Retrieving Image</string>
    <string name="CreateAccountTitle">Create Account</string>
    <string name="CheckingMessage">Checking Location</string>
    <string name="NextText">Next Image</string>
    <string name="UploaderMessage">Uploaded By: %1$s</string>
    <string name="LeaderBoardTitle">Leaderboard</string>
</resources>
