<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.chris.eyespy.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:id= "@+id/topMessage"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        android:id="@+id/uploadProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_below="@+id/topMessage"
        android:layout_alignParentStart="true"
        android:max="100"/>

    <ImageView
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:id="@+id/image"
        android:contentDescription="@string/MainActivityImageViewContentDescription"
        android:layout_below="@+id/uploadProgress"
        android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/button_image"
            android:layout_height="48dp"
            android:layout_width="wrap_content"
            android:text="@string/CameraButtonText"
            android:onClick="onClick"
            android:layout_marginTop="16dp"
            android:layout_marginRight="5dp"
            android:layout_below="@+id/image"
            android:layout_alignStart="@+id/image" />

        <Button
            android:id="@+id/SignOutButton"
            android:layout_height="48dp"
            android:layout_width= "wrap_content"
            android:text= "@string/SignOutButtonText"
            android:onClick="onClick"
            android:layout_below="@+id/button_image"
            android:layout_centerHorizontal="true" />


    <Button
        android:id="@+id/getImage"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/GetImageButtonText"
        android:onClick="onClick"
        android:layout_alignTop="@+id/checkButton"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/CheckButtonText"
        android:textSize="12sp"
        android:id="@+id/checkButton"
        android:visibility="invisible"
        android:onClick="onClick"
        android:layout_alignBaseline="@+id/button_image"
        android:layout_alignBottom="@+id/button_image"
        android:layout_toStartOf="@+id/getImage" />



</RelativeLayout>
